fix ut optimize logs